# quiet-star

./: .gitignore  README.md  configuration_mistral.py  main.ipynb  main2 copy.ipynb  main2.ipynb  main_8bit gptq.ipynb  main_8bit.ipynb  main_infer.ipynb  mjc_research_log.md  modeling_mistral.py  pyproject.toml  scratch.ipynb
