[tool.poetry]
name = "quiet-star"
version = "0.1.0"
description = ""
authors = ["Eric Zelikman, Georges Harik, Yijia Shao, Varuna Jayasiri, Nick Haber, Noah D. Goodman"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.0"
loguru = "^0.7.2"
tqdm = "^4.66.1"
black = "^23.12.1"
ruff = "^0.1.14"
torch = {version = "^2.2.0+cu118", source = "pytorch"}
diff-match-patch = "^20230430"
matplotlib = "^3.8.3"
dataset = "^1.6.2"
transformers = "4.37.1"
accelerate = "^0.28.0"
seaborn = "^0.13.2"
wandb = "^0.16.5"
termcolor = "^2.4.0"
reportlab = "^4.1.0"
bitsandbytes = "^0.43.0"
auto-gptq = "^0.7.1"
optimum = "^1.18.0"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.1"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
